log_output/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hashgenerator-ingress
  namespace: exercises
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      
      # Log output
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hashgenerator-svc
            port:
              number: 2345
      
      # Pingpong
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 2345
